refactor: restructure UI and fix logical validation issues
- Restructured the overall interface layout for better UX
- Fixed logical validation issues across ServiceOrders pages (Create, Edit, Delete, Details)
- Improved Index page structure and layout
- Updated shared layout (_Layout.cshtml) for consistency
- Adjusted DbContext configuration as needed

--- a/AutoRepairCore/appsettings.Development.json
+++ b/AutoRepairCore/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=AutoRepairDB;User Id=sa;Password=root;TrustServerCertificate=True;"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
